# underwater_inspection

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: default.yaml
include/underwater_inspection/: map_carving.h
launch/: multiobjective_learning.launch
msg/: MultiViewpointInfo.msg  ViewpointInfo.msg
src/: BatteryMetric.py  GenerateClouds.py  PEAS.py  ParetoFronts.py  SPEA2.py  SliceCloud.py  TestCloudSectionGen.py  TestParetoFronts.py  TestPointCloudGen.py  ViewpointGeneration.py  ViewpointSelection.py  map_carving.cpp
srv/: BatteryUsage.srv  CarveMap.srv  DepleteBattery.srv
