<?xml version="1.0"?>
<package format="2">
  <name>underwater_inspection</name>
  <version>0.0.0</version>
  <description>The inspection package</description>

  <maintainer email="vivekanr@oregonstate.edu">Rakesh Vivekanandan</maintainer>
  <maintainer email="puentek@oregonstate.edu">Karina Puente</maintainer>
  <maintainer email="mitchcol@oregonstate.edu">Colin Mitchell</maintainer>

  <license>MIT</license>

  <author email="vivekanr@oregonstate.edu">Rakesh Vivekanandan</author>
  <author email="puentek@oregonstate.edu">Karina Puente</author>
  <author email="mitchcol@oregonstate.edu">Colin Mitchell</author>


  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>octomap</build_depend>
  <build_depend>octomap-msgs</build_depend>
  <build_depend>octomap-ros</build_depend>
  <build_depend>octomap-rviz-plugins</build_depend>
  <build_depend>ompl</build_depend>
  <build_depend>ompl-dbgsym</build_depend> -->

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <!-- <build_depend>greensea_msgs</build_depend> -->
  <build_depend>tf</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <!-- <build_export_depend>greensea_msgs</build_export_depend> -->
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <!-- <exec_depend>greensea_msgs</exec_depend> -->
  <exec_depend>tf</exec_depend>


  <export>

  </export>
</package>
